--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
     "framer-motion": "^11.0.8",
@@ -29,7 +28,8 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -37,10 +37,13 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "dotenv": "^16.4.7",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "ethers": "^6.13.5",
     "globals": "^15.9.0",
+    "hardhat": "^2.22.19",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
