--- a/package.json
+++ b/package.json
@@ -11,24 +11,32 @@
     "server": "node server/index.js"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.18.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-countup": "^6.5.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.0.2",
     "web3": "^4.16.0"
   },
   "devDependencies": {
